# yaraast

./: .bandit  .gitignore  .pre-commit-config.yaml  .pydocstyle  .safety-policy.json  CLAUDE.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  metrics_patterns_flow.dot  mypy.ini  pyproject.toml  qlty.toml  requirements-dev.txt  requirements.txt  sample_more_graph_complexity.dot  sample_more_graph_full.dot  sample_more_graph_modules.dot  sample_more_patterns_complexity.dot  sample_more_patterns_hex.dot  sample_more_patterns_similarity.dot  simple_roundtrip_support.py
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore  README.md  __init__.py  benchmark_large_files.py  conftest.py  memory_profiler.py  profiler.py  run_all_benchmarks.py  test_benchmarks.py  test_file_generator.py
docs/: final-lsp-status.md  libyara-integration.md  lsp-parity-report.md  lsp-runtime.md  multi-file-resolution.md  static-analysis-baseline.md
docs/adr/: README.md
docs/benchmarks/: signature-sweep-20260629.md  signature-sweep-20260629_02.json
examples/: builder_demo.py  complete_features.py  custom_visitor.py  libyara_integration.py  parse_file.py  transform_ast.py  vt_livehunt_demo.py  yaral_examples.yar
examples/multi-file/: main.yar
scripts/: __init__.py  benchmark_lsp_runtime.py
tests/: conftest.py  test_advanced_generator.py  test_advanced_generator_helpers2_and_layouts_coverage_loop.py  test_advanced_generator_layout_coverage_loop.py  test_analysis.py  test_analysis_best_practices_coverage_loop.py  test_analysis_best_practices_more.py  test_analysis_dependency_analyzer_coverage_loop.py  test_analysis_dependency_analyzer_more.py  test_analysis_input_validation_more.py  test_analysis_modules.py  test_analysis_optimization_coverage_loop.py  test_analysis_optimization_helpers_more.py  test_analysis_optimization_more.py  test_analysis_string_usage_coverage_loop.py  test_analysis_string_usage_more.py  test_ast_base_more2.py  test_ast_base_more3.py  test_ast_conditions_coverage_loop.py  test_ast_diff_compare_coverage_loop.py  test_ast_diff_hasher_coverage_loop.py  test_ast_expressions_coverage_loop.py  test_ast_extern_coverage_loop.py  test_ast_extern_more.py  test_ast_extern_more2.py  test_ast_extern_more3.py  test_ast_modifiers_coverage_loop.py  test_ast_modifiers_more.py  test_ast_modules_more2.py  test_ast_pragmas_coverage_loop.py  test_ast_pragmas_more.py  test_ast_rules_coverage_loop.py  test_ast_rules_more.py  test_ast_rules_more2.py  test_ast_simple_nodes_more.py  test_ast_strings_coverage_loop.py  test_ast_transformer_rename_expression_loop.py  test_ast_transformer_rename_strings_coverage.py  test_authoring_actions_basic_coverage_loop.py  test_authoring_actions_rewrites_coverage_loop.py  (+630 more)
vscode-yaraast/: .vscodeignore  CHANGELOG.md  INSTALL-VERIFICATION.md  README.md  RELEASE.md  USAGE.md  eslint.config.js  package-lock.json  package.json  yaraast-0.1.0.vsix
vscode-yaraast/scripts/: verify_vsix.py
vscode-yaraast/snippets/: yara.code-snippets
vscode-yaraast/src/: extension.ts
vscode-yaraast/syntaxes/: yara.tmLanguage.json
yaraast/: CLAUDE.md  __init__.py  __main__.py  config.py  errors.py  limits.py  regex_literals.py  string_escaping.py  string_references.py  unified_parser.py  version.py  xor_keys.py
yaraast/analysis/: CLAUDE.md  __init__.py  best_practices.py  best_practices_helpers.py  dependency_analyzer.py  optimization.py  optimization_grouping_helpers.py  optimization_helpers.py  optimization_rule_analysis.py  rule_analyzer.py  string_usage.py
yaraast/ast/: CLAUDE.md  __init__.py  base.py  comments.py  conditions.py  expressions.py  extern.py  meta.py  modifiers.py  modules.py  operators.py  pragmas.py  rules.py  simple_nodes.py  strings.py
yaraast/builder/: CLAUDE.md  __init__.py  ast_transformer.py  condition_builder.py  expression_builder.py  file_builder.py  file_builder_validation.py  fluent_condition_builder.py  fluent_condition_helpers.py  fluent_file_builder.py  fluent_rule_builder.py  fluent_rule_helpers.py  fluent_rule_presets.py  fluent_string_builder.py  hex_string_builder.py  hex_validation.py  rule_builder.py  string_identifier_validation.py
yaraast/cli/: CLAUDE.md  __init__.py  analyze_report_helpers.py  analyze_reporting.py  analyze_services.py  ast_tools.py  ast_visualization.py  bench_reporting.py  bench_services.py  benchmark_tools.py  command_registry.py  diff_reporting.py  diff_services.py  diff_tools.py  fluent_reporting.py  fluent_services.py  fmt_reporting.py  fmt_services.py  format_reporting.py  format_services.py  libyara_handlers.py  libyara_handlers_common.py  libyara_handlers_compile.py  libyara_handlers_optimize.py  libyara_handlers_scan.py  libyara_reporting.py  libyara_services.py  lsp_reporting.py  lsp_services.py  main.py  metrics_reporting.py  metrics_reporting_complexity.py  metrics_reporting_display.py  metrics_services.py  metrics_string_services.py  optimize_reporting.py  optimize_services.py  parse_output_services.py  parse_reporting.py  parse_services.py  (+24 more)
yaraast/codegen/: CLAUDE.md  __init__.py  advanced_generator.py  advanced_generator_helpers.py  advanced_generator_helpers2.py  advanced_generator_layout.py  advanced_layout.py  comment_aware_generator.py  formatting.py  generator.py  generator_comment_sections.py  generator_expression_visitors.py  generator_expressions.py  generator_formatting.py  generator_helpers.py  generator_leaf_visitors.py  generator_sections.py  generator_structure_visitors.py  layouts.py  options.py  pretty_layout.py  pretty_printer.py  pretty_printer_helpers.py  pretty_printer_layout.py  pretty_printer_sections.py
yaraast/conformance/: __init__.py  differential.py  engines.py
yaraast/dialects/: CLAUDE.md  __init__.py
yaraast/evaluation/: __init__.py  evaluation_helpers.py  evaluator.py  evaluator_ops.py  mock_modules.py  string_matcher.py
yaraast/interfaces/: __init__.py  lexer_interface.py  token_interface.py
yaraast/lexer/: CLAUDE.md  __init__.py  comment_preserving_lexer.py  error_tolerant_lexer.py  lexer.py  lexer_dispatch.py  lexer_errors.py  (+7 more)
(+377 files in other folders)
